added reference to existing material for EMA

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -307,6 +307,8 @@ Researchers at the School of Rehabilitation Sciences (SReS) at McMaster Universi
 
 Specifically, the type of EMA that the SReS is interested in is focused on analyzing the daily activities and symptoms of mostly-older adults with mobility and spinal issues. For example, they may be interested in performing EMA on a patient with spinal compression issues which prevent them from being able to walk long distances without experiencing pain or distress. They wish to track that patient's walking activity as they go about their daily life. If this patient stops walking or moving, they wish to prompt them with questions such as, "Did you stop moving? If so, was it due to pain? Describe your pain, describe which portion of the body it is in." The answers to these questions will be combined with activity monitoring data to form a better picture about the experience this patient has with their spinal and mobility issues.\\
 
+EMA has become an increasingly popular research methodology in the realm of pain related studies. In 2022, the SReS wished to evaluate the feasability of an eHealth-based prehabilitation program for participants undergoing surgery for lumbar spinal stenosis (LSS). ~\cite{MacedoPilotTrial} This study incorporated EMA into the study; With a wearable triaxial accelerometer (Actiwatch Spectrum Pro Startup, Philips, USA) worn for seven days in a row, total weekly minutes of physical activity were recorded. This battery-operated accelerometer captured time-varying accelerations. Data was gathered on maximum duration of continuous exercise, volume of activity (total counts of activities per week), energy expenditure intensities, and maximal intensity (maximum counts of activities per minute). Then for three times a day for seven days, participants were asked to assess how severe their pain and exhaustion were. This data was collated together and used to evaluate the evaluate the effect LSS had on walking ability and daily pain. \\
+
 In order to accomplish this, the researchers have attempted to use various smart-watch-esque activity tracking devices to track the activity of their patients, and have attempted to use apps and different pieces of software for them to prompt their patients with questions. However, they have been frustrated with very limited success, and are looking for a system which integrated precise and relevant activity tracking with user-friendly self-reporting symptom functionality.\\
 
 The researchers require a method to perform EMA analysis in a manner which even older patients can use, integrated into one package which gathers relevant data about a patient's activities and allows them to easily report what is currently going on and how they feel. They also are looking for a way to access EMA data in various ways. This includes graphical representations of the data which are meaningful to researchers, along with the raw data itself. This data could be activity data, symptoms reporting data, both types of data collated together, and so on. \\
@@ -1079,8 +1081,8 @@ The following explains the states presented in the above Finite State Machine:
 \section{References}
 \label{References}
 N/A
-%\bibliographystyle {plainnat}
-%\bibliography {../../refs/References}
+\bibliographystyle {plainnat}
+\bibliography {../../refs/References}
 
 \section*{Appendix --- Reflection}
 
