--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -1252,6 +1252,8 @@ None.
 
 None.
 
+\newpage
+
 \section{MIS of Configuration Module} \label{mPS2} 
 
 \subsection{Module}
@@ -1295,6 +1297,8 @@ None.
 \subsubsection{Local Functions}
 
 None.
+
+\newpage
 
 \section{MIS of Graph Plotter} \label{mGP} 
 
